# EasyCrypto

./: Cargo.toml
src/: main.rs
