[package]
name = "easy_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7", features = ["tokio", "default_system_font"]}
rfd = "0.11"
chacha20poly1305 = "0.10"
rand = "0.8"
